changed appfeed pallete fixed spacing/margins/padding

--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -54,8 +54,25 @@ body {
   align-items: center;
   padding: 10px;
   margin: 1px;
-  box-shadow: 0 0 15px 4px rgba(5, 10, 20, 30.06);
+  box-shadow: None;
   border-radius: 15px;
   width: 100%;
   text-transform: uppercase;
+  background-color: #4c5664;
+  color: #e2e8f0;
+}
+.appFeed {
+  border-radius: 20px;
+}
+.btn-check:focus + .btn-dark,
+.btn-dark:focus {
+  background-color: #4c5664;
+  border-color: None;
+  box-shadow: None;
+}
+.btn-check:focus + .btn-dark,
+.btn-dark:hover {
+  background-color: #4c5664;
+  border-color: None;
+  box-shadow: None;
 }
